k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stryktips
  labels:
    app: stryktips-bot
